    - src/pulsemanager.cpp: print out PA --version output as a debug message.
    - macbuild.sh: also bundle xauth binary as nxauth binary.
    - macbuild.sh: switch to bundling PulseAudio 11.1 since it's now available
      in MacPorts.
    - src/sshmasterconnection.cpp: don't ask for private key passphrase if
      auto-login merely failed due to the server denying the public key.

  [ Oleksandr Shneyder ]
  * Change echo mode for user input in InteractionDialog.

 -- X2Go Release Manager <git-admin@x2go.org>  Sun, 29 Oct 2017 11:44:44 +0100

x2goclient (4.1.1.0-0x2go1) unstable; urgency=medium

  [ Mihai Moldovan ]
  * New upstream version (4.1.1.0):
    - src/sshmasterconnection.cpp: use ssh_channel_listen_forward () instead
      of ssh_forward_listen () for newer libssh versions. Fixes: #870.
    - src/sshmasterconnection.cpp: with libssh 0.6.0 and newer, get the public
      key via ssh_get_server_publickey () (0.8.0 and higher) or
      ssh_get_publickey () (0.7.x and lower) and its hash via
      ssh_get_publickey_hash () instead of using the deprecated
      ssh_get_pubkey_hash () function. Additionally, replace free () with the
      more appropriate ssh_string_free_char () function after using
      ssh_get_hexa (). This will break on very old systems with a hopelessly
      outdated libssh version, but we do not care about these systems in the
      first place.
    - src/sshmasterconnection.cpp: replace string_free () with its successor
      ssh_string_free (). Will break on ancient systems, but we don't care.
    - src/sshmasterconnection.cpp: replace deprecated channel_new () function
      with ssh_channel_new (). Might break on ancient systems, but we don't
      care. Also, add error handling in case ssh_channel_new () failed...
    - src/sshmasterconnection.cpp: replace deprecated channel_open_forward ()
      function with ssh_channel_open_forward (). Might break on ancient
      systems, but we don't care.